# clinical-documentation-assistant

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml  execute-plan.md  pyproject.toml  stop.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9f2ba23b30c1_initial_schema.py  ea0a282760a4_add_users_table.py
backend/clin_doc/: __init__.py  asr.py  auth.py  deps.py  main.py  rate_limit.py  schemas.py  seed.py  services.py  settings.py
backend/clin_doc/db/: __init__.py  audit.py  enums.py  models.py  repositories.py  roundtrip.py  session.py
backend/clin_doc/routers/: __init__.py  auth.py  codes.py  encounters.py  exports.py  patients.py  referrals.py  summaries.py
backend/tests/: conftest.py  test_api.py  test_db_roundtrip.py  test_glue.py  test_phase5.py  test_phase6.py  test_smoke_engines.py
backend/tests/fixtures/: r4_patient_bundle.json
docs/: ARCHITECTURE.md  DEPLOY.md
frontend/: .gitignore  .gitkeep  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/encounters/[id]/: page.tsx
frontend/app/encounters/new/: page.tsx
frontend/app/login/: page.tsx
frontend/app/patients/: page.tsx
frontend/components/: Banner.tsx  SoapEditor.tsx  TopBar.tsx
frontend/lib/: api.ts  diff.ts  types.ts
infra/: .gitkeep  Dockerfile.backend  Dockerfile.frontend  entrypoint.sh
